# substrate-tutorials

exercises/ex00-testing/flipper/: Cargo.toml
exercises/ex00-testing/flipper/src/: lib.rs
exercises/ex00-testing/flipper/src/tests/: flipper.rs  mock.rs
exercises/ex01-pallet-easy/assets/: Cargo.toml
exercises/ex01-pallet-easy/assets/src/: lib.rs  types.rs
exercises/ex03-pallet-intermediate/nft/: Cargo.toml
exercises/ex03-pallet-intermediate/nft/src/: lib.rs  types.rs
exercises/ex04-pallet-coupling/loosely-coupled-marketplace/: Cargo.toml
exercises/ex04-pallet-coupling/loosely-coupled-marketplace/src/: lib.rs
exercises/ex04-pallet-coupling/marketplace-nfts/: Cargo.toml
exercises/ex04-pallet-coupling/marketplace-nfts/src/: lib.rs  types.rs
exercises/ex04-pallet-coupling/tightly-coupled-marketplace/: Cargo.toml
exercises/ex04-pallet-coupling/tightly-coupled-marketplace/src/: lib.rs  types.rs
exercises/ex05-hooks/reminder/: Cargo.toml
exercises/ex05-hooks/reminder/src/: lib.rs  mock.rs
exercises/ex06-weights/weights/: Cargo.toml
exercises/ex06-weights/weights/src/: lib.rs
exercises/ex07-imbalances/imbalances/: Cargo.toml
exercises/ex07-imbalances/imbalances/src/: lib.rs
exercises/ex08-genesis-config/nft-with-genesis-config/: Cargo.toml
exercises/ex08-genesis-config/nft-with-genesis-config/src/: lib.rs
exercises/ex09-mock/pallet-to-mock/: Cargo.toml
exercises/ex09-mock/pallet-to-mock/src/: lib.rs
exercises/ex10-offchain-worker/pallet-price-oracle/: Cargo.toml
exercises/ex10-offchain-worker/pallet-price-oracle/src/: lib.rs
(+18 files in other folders)
